# sr100-model-compiler

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/sr100_model_compiler/: __init__.py  gen_model_cpp.py  sr100_model_compiler.py  sr100_model_optimizer.py  utils.py
src/sr100_model_compiler/config/: sr100_system_config.ini  u55_eval_with_TA_config_400_and_200_MHz.ini
src/sr100_model_compiler/templates/: tflite.cc.template
src/srmodel/: __init__.py  gen_in_out_cpp.py  gen_model_cpp.py  generate_micro_mutable_op_resolver_from_model.py  infer_code_gen.py  utils.py
src/srmodel/templates/: header_template.txt  tflite.cc.template
srmodel/: gen_input_expected_data.py  gen_model_cpp.py  infer_code_gen.py
tests/: gen_golden.sh  test_compiler.py  test_model_compiler.py  test_models.py  test_optimizer.py  test_vela_version.py
tests/golden/: model_io.cc
tests/golden/hello_world_flash/: hello_world_summary_Ethos_U55_400MHz_SRAM_3.2_GBs_Flash_3.2_GBs.csv  hello_world_summary_Ethos_U55_High_End_Embedded.csv  model.cc  model_io.cc  output_0.npy
tests/golden/hello_world_sram/: hello_world_summary_Ethos_U55_400MHz_SRAM_3.2_GBs_Flash_3.2_GBs.csv  hello_world_summary_Ethos_U55_High_End_Embedded.csv  hello_world_vela.tflite  model.cc  model_io.cc  output_0.npy
tests/golden/model_256x480_flash/: model_256x480_summary_Ethos_U55_400MHz_SRAM_3.2_GBs_Flash_3.2_GBs.csv  model_256x480_summary_Ethos_U55_High_End_Embedded.csv  model_256x480_vela.tflite  model_io.cc  output_0.npy  output_1.npy  output_2.npy
tests/golden/model_256x480_sram/: model_256x480_summary_Ethos_U55_400MHz_SRAM_3.2_GBs_Flash_3.2_GBs.csv  model_256x480_summary_Ethos_U55_High_End_Embedded.csv  model_io.cc  output_0.npy  output_1.npy  output_2.npy
