[project]
name = "sr100-model-compiler"
version = "0.2.0"
description = "Shortened SDK model targeting package"
authors = [{ name = "Synaptics Inc", email = "dgarrett@synaptics.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ethos-u-vela @ git+https://review.mlplatform.org/ml/ethos-u/ethos-u-vela.git@4.1.0",
    "argparse~=1.4.0",
    "Jinja2~=2.11.2",
    "numpy==1.21.3",
    "tensorflow~=2.10.0",
    "markupsafe==2.0.1",
    "mako",
]

[project.optional-dependencies]
dev = [
    "black",
    "pylint",
    "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
sr100_model_compiler = "sr100_model_compiler.sr100_model_compiler:main"